# 8903-Assignment5

ProjectTemplate-master/: CMakeLists.txt  LICENSE  README.md  featureMatrixOut.txt
ProjectTemplate-master/3rdPartyLibs/UnitTest++/: CMakeLists.txt  TestReporterStdout.cpp
ProjectTemplate-master/3rdPartyLibs/sndlib/: CMakeLists.txt
ProjectTemplate-master/Assignment5/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  cppcheck-CppCheck_Dsp.cmake  cppcheck-CppCheck_MyProject.cmake
ProjectTemplate-master/Assignment5/AudioFileIO/: cmake_install.cmake
ProjectTemplate-master/Assignment5/AudioFileIO/MyProject.build/Debug/AudioFileIO.build/: AudioFileIO.dep
ProjectTemplate-master/Assignment5/AudioFileIO/MyProject.build/Debug/AudioFileIO.build/Objects-normal/i386/: AudioFileIO.LinkFileList  AudioFileIf.d
ProjectTemplate-master/Assignment5/AudioFileIO/MyProject.build/Debug/AudioFileIO.build/Objects-normal/x86_64/: AudioFileIO.LinkFileList
ProjectTemplate-master/Assignment5/AudioFileIO/sndlib/: cmake_install.cmake
ProjectTemplate-master/Assignment5/AudioFileIO/sndlib/MyProject.build/Debug/sndlib.build/: sndlib.dep
ProjectTemplate-master/Assignment5/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
ProjectTemplate-master/Assignment5/Dsp/: cmake_install.cmake
ProjectTemplate-master/Assignment5/Dsp/CMakeScripts/: CppCheck_Dsp_cmakeRulesBuildPhase.makeRelease
ProjectTemplate-master/Assignment5/Dsp/MyProject.build/Debug/Dsp.build/: Dsp.dep
ProjectTemplate-master/Assignment5/Dsp/MyProject.build/Debug/Dsp.build/Objects-normal/i386/: Dsp.LinkFileList
ProjectTemplate-master/Assignment5/Dsp/MyProject.build/Debug/Dsp.build/Objects-normal/x86_64/: Dsp.LinkFileList  Fft.d  rvfft.d
ProjectTemplate-master/Assignment5/JuceLibraryCode/: cmake_install.cmake
ProjectTemplate-master/Assignment5/MyProject/: cmake_install.cmake
ProjectTemplate-master/Assignment5/MyProject.build/Debug/ALL_BUILD.build/: Script-BF5E4CC91FEF41578946BF23.sh
ProjectTemplate-master/Assignment5/MyProject.build/Debug/RUN_TESTS.build/: Script-4041F295B44A4ADFA97AF83D.sh
ProjectTemplate-master/Assignment5/MyProject.build/Debug/ZERO_CHECK.build/: Script-BAE2E58E59554F068C3B4E7E.sh
ProjectTemplate-master/Assignment5/MyProject.xcodeproj/: project.pbxproj
ProjectTemplate-master/Assignment5/MyProject.xcodeproj/project.xcworkspace/xcuserdata/deepak.xcuserdatad/: UserInterfaceState.xcuserstate
ProjectTemplate-master/Assignment5/MyProject.xcodeproj/xcuserdata/deepak.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  AudioFileIO.xcscheme  CppCheck_Dsp.xcscheme  CppCheck_MyProject.xcscheme  Dsp.xcscheme  MyProject.xcscheme  MyProjectCL.xcscheme  RUN_TESTS.xcscheme  TestCL.xcscheme  UnitTest++.xcscheme  ZERO_CHECK.xcscheme  sndlib.xcscheme  xcschememanagement.plist
ProjectTemplate-master/Assignment5/MyProject/CMakeScripts/: CppCheck_MyProject_cmakeRulesBuildPhase.makeDebug
ProjectTemplate-master/Assignment5/MyProject/MyProject.build/Debug/MyProject.build/: MyProject.dep
ProjectTemplate-master/Assignment5/MyProject/MyProject.build/Debug/MyProject.build/Objects-normal/i386/: MyProject.LinkFileList
ProjectTemplate-master/Assignment5/MyProject/MyProject.build/Debug/MyProject.build/Objects-normal/x86_64/: MyProject.LinkFileList  MyProject.d
ProjectTemplate-master/Assignment5/MyProjectCL/: cmake_install.cmake
ProjectTemplate-master/Assignment5/MyProjectCL/MyProject.build/Debug/MyProjectCL.build/: MyProjectCL.dep
ProjectTemplate-master/Assignment5/MyProjectCL/MyProject.build/Debug/MyProjectCL.build/Objects-normal/i386/: MyProjectCL  MyProjectCL.LinkFileList
ProjectTemplate-master/Assignment5/MyProjectCL/MyProject.build/Debug/MyProjectCL.build/Objects-normal/x86_64/: MyProjectCL  MyProjectCL.LinkFileList  MyProjectMain.d
ProjectTemplate-master/Assignment5/TestCL/: cmake_install.cmake
ProjectTemplate-master/Assignment5/TestCL/MyProject.build/Debug/TestCL.build/: TestCL.dep
ProjectTemplate-master/Assignment5/TestCL/MyProject.build/Debug/TestCL.build/Objects-normal/i386/: TestCL  TestCL.LinkFileList  Test_AudioIO.d  Test_Fft.d  Test_Lfo.d  Test_MovingAvg.d  Test_MovingAvg.dia
ProjectTemplate-master/Assignment5/TestCL/UnitTest++/: cmake_install.cmake
ProjectTemplate-master/Assignment5/TestCL/UnitTest++/MyProject.build/Debug/UnitTest++.build/: UnitTest++.dep
ProjectTemplate-master/Assignment5/Testing/Temporary/: CTestCostData.txt
ProjectTemplate-master/Assignment5/incl/: MyProjectConfig.h
ProjectTemplate-master/MyProject/Tests/: Test_MyProject.cpp
ProjectTemplate-master/MyProject/incl/: CFeatureExtractor.h  MyProject.h
ProjectTemplate-master/MyProject/src/: MyProjectConfig.h.in
ProjectTemplate-master/MyProject/src/JuceLibraryCode/: AppConfig.h.in  CMakeLists.txt  Info.plist.in  JuceHeader.h.in
ProjectTemplate-master/MyProject/src/MyProject/: CFeatureExtractor.cpp  CMakeLists.txt  MyProject.cpp  doxy.config.in
ProjectTemplate-master/MyProject/src/MyProjectCL/: CMakeLists.txt  MyProjectMain.cpp
ProjectTemplate-master/MyProject/src/MyProjectGui/: CMakeLists.txt  Main.cpp  MainComponent.h
ProjectTemplate-master/MyProject/src/MyProjectPlugin/: CMakeLists.txt  PluginEditor.h  PluginProcessor.h
ProjectTemplate-master/SharedSources/AudioFileIO/: AudioFileIf.cpp  CMakeLists.txt
ProjectTemplate-master/SharedSources/Dsp/: CMakeLists.txt  Fft.cpp  Lfo.h  MovingAvg.h
ProjectTemplate-master/SharedSources/TestCL/: CMakeLists.txt  Test.cpp
ProjectTemplate-master/SharedSources/incl/: AudioFileIf.h  Dsp.h  InputBuffSrc.h  RingBuffer.h
ProjectTemplate-master/Tests/: Test_AudioIO.cpp  Test_Fft.cpp  Test_InputBuffSrc.cpp  Test_Lfo.cpp  Test_MovingAvg.cpp  Test_RingBuffer.cpp
ProjectTemplate-master/Tests/testdata/: matlabref.txt  matlabrefCentroid.txt  matlabrefFlux.txt  matlabrefRolloff.txt  matlabrefZCR.txt
ProjectTemplate-master/cmake.modules/: FindCppcheck.cmake  FindJuce.cmake  FindVST.cmake  GenerateCppcheck.cmake  compiler-options.cmake  functions.cmake  oslibs.cmake  platform.cmake
(+41 files in other folders)
